Add new reveal type policy: stacked